@@ -5,8 +5,14 @@
 <meta name="generator" content="Docutils 0.15b.dev: http://docutils.sourceforge.net/" />
 <title>reStructuredText Test Document</title>
 <meta name="author" content="David Goodger" />
+<meta name="author" content="Me" />
+<meta name="author" content="Myself" />
+<meta name="author" content="I" />
+<meta name="dcterms.date" content="Now, or yesterday.  Or maybe even before yesterday." />
+<meta name="dcterms.rights" content="This document has been placed in the public domain. You may do with it as you wish. You may copy, modify, redistribute, reattribute, sell, buy, rent, lease, destroy, or improve it, quote it at length, excerpt, incorporate, collate, fold, staple, or mutilate it, or do anything else to it that your or anyone else's heart desires." />
 <meta content="reStructuredText, test, parser" name="keywords" />
 <meta content="A test document, containing at least one example of each reStructuredText construct." lang="en" name="description" xml:lang="en" />
+<link rel="schema.dcterms" href="http://purl.org/dc/terms/">
 <link rel="stylesheet" href="../input/data/minimal.css" type="text/css" />
 <link rel="stylesheet" href="../input/data/plain.css" type="text/css" />
 <link rel="stylesheet" href="../input/data/math.css" type="text/css" />
